# flexible-arxiv-rss

./: CMakeLists.txt  LICENSE  README
share/: arxiv.css  make_config.sh  nginx.conf  poll_arxiv_oai.sh  preferences.xml
src/: common.hpp  html-common.hpp  oai-common.hpp  oai-filter-records.cpp  oai-get-preference.cpp  oai-merge-records.cpp  oai-records-2html.cpp  oai-records-2rss.cpp  prefs-common.hpp  rss-common.hpp
src/zen/: stl_tools.h  string_tools.h  type_tools.h
src/zenxml/: bind.h  cvrt_struc.h  cvrt_text.h  dom.h  io.h  parser.h  static_unit_test.cpp  xml.h
